deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nebulastream
  labels:
    app.kubernetes.io/part-of: nebulastream
