deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-plane
  namespace: nebulastream
  labels:
    app.kubernetes.io/name: control-plane
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: control-plane
  ports:
    - name: http
      port: 8000
      targetPort: http
